convert css to scss and restructure directory

--- a/Home.html
+++ b/Home.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="./assets/images/logo-clique.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/responsive.css">
-    <link rel="stylesheet" href="../ingredient-general/css/base.css">
-    <link rel="stylesheet" href="./assets/library-grid-system/Grid.css">
+    <link rel="stylesheet" href="./assets/css/home.css">
+    <link rel="stylesheet" href="./assets/css/home__responsive.css">
+    <link rel="stylesheet" href="./assets/css/base.css">
     <title>Clique</title>
 </head>
 <body>
@@ -93,7 +92,7 @@
             </div>
             <div class="home-content__post-container">
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('../home-page/assets/images/Image\ 88.jpg');">
+                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 88.jpg');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -122,7 +121,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('../home-page/assets/images/Image\ 80.png');">
+                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 80.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -151,7 +150,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('../home-page/assets/images/Image\ 77.png');">
+                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 77.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -179,7 +178,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('../home-page/assets/images/Image\ 81.png');">
+                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 81.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -207,7 +206,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('../home-page/assets/images/Image\ 86.jpg');">
+                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 86.jpg');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -235,7 +234,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('../home-page/assets/images/Image\ 83.png');">
+                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 83.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -263,7 +262,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('../home-page/assets/images/Image\ 78.png');">
+                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 78.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -291,7 +290,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('../home-page/assets/images/Image\ 84.png');">
+                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 84.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -319,7 +318,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('../home-page/assets/images/Image\ 79.png');">
+                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 79.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -347,7 +346,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('../home-page/assets/images/Image\ 85.png');">
+                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 85.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -376,7 +375,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('../home-page/assets/images/Image\ 91.jpg');">
+                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 91.jpg');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -404,7 +403,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('../home-page/assets/images/Image\ 87.jpg');">
+                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 87.jpg');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -432,7 +431,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('../home-page/assets/images/Image\ 90.jpg');">
+                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 90.jpg');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -460,7 +459,7 @@
                     </div>
                 </div>
                  <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('../home-page/assets/images/haaland-thImage\ 89.jpg');">
+                    <div class="home-post-img" style="background-image: url('./assets/images/haaland-thImage\ 89.jpg');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -489,7 +488,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('../home-page/assets/images/Image\ 70.png');">
+                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 70.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
