set up gulp for repo

--- a/app/Home.html
+++ b/app/Home.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" href="./assets/images/logo-clique.png">
+    <link rel="shortcut icon" href="../build/assets/images/logo-clique.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/home.css">
-    <link rel="stylesheet" href="./assets/css/home__responsive.css">
-    <link rel="stylesheet" href="./assets/css/base.css">
+    <link rel="stylesheet" href="../build/assets/css/styles.min.css">
+    <link rel="stylesheet" href="../build/assets/css/styles.min.css.map">
     <title>Clique</title>
 </head>
 <body>
@@ -32,7 +31,7 @@
                 </div>
             </div>
             <a href="" class="home-header__branch">
-                <img src="./assets/images/CLINIK.png" alt="">                 
+                <img src="../build/assets/images/CLINIK.png" alt="">                 
             </a>
             <label for="functional" class="home-header__functional-mobile">
                 <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="svg-inline--fa fa-bars fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg>
@@ -65,8 +64,8 @@
                     <span>Logout</span>                  
                 </div>
                 <div class="header-functional__user">
-                    <img src="./assets/images/Mask Group 107.png" alt="" class="functional-user-img">
-                    <span class="header-functional_user-name">Hà Kiều Trang</span>
+                    <img src="../build/assets/images/Mask Group 107.png" alt="" class="functional-user-img">
+                    <span class="header-functional__user-name">Hà Kiều Trang</span>
                     <label for="functional" class="header-functional__user-close"> 
                         X
                     </label>
@@ -92,7 +91,7 @@
             </div>
             <div class="home-content__post-container">
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 88.jpg');">
+                    <div class="home-post-img" style="background-image: url('../build/assets/images/Image\ 88.jpg');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -121,7 +120,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 80.png');">
+                    <div class="home-post-img" style="background-image: url('../build/assets/images/Image\ 80.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -150,7 +149,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 77.png');">
+                    <div class="home-post-img" style="background-image: url('../build/assets/images/Image\ 77.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -178,7 +177,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 81.png');">
+                    <div class="home-post-img" style="background-image: url('../build/assets/images/Image\ 81.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -206,7 +205,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 86.jpg');">
+                    <div class="home-post-img" style="background-image: url('../build/assets/images/Image\ 86.jpg');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -234,7 +233,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 83.png');">
+                    <div class="home-post-img" style="background-image: url('../build/assets/images/Image\ 83.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -262,7 +261,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 78.png');">
+                    <div class="home-post-img" style="background-image: url('../build/assets/images/Image\ 78.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -290,7 +289,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 84.png');">
+                    <div class="home-post-img" style="background-image: url('../build/assets/images/Image\ 84.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -318,7 +317,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 79.png');">
+                    <div class="home-post-img" style="background-image: url('../build/assets/images/Image\ 79.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -346,7 +345,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 85.png');">
+                    <div class="home-post-img" style="background-image: url('../build/assets/images/Image\ 85.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -375,7 +374,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 91.jpg');">
+                    <div class="home-post-img" style="background-image: url('../build/assets/images/Image\ 91.jpg');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -403,7 +402,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 87.jpg');">
+                    <div class="home-post-img" style="background-image: url('../build/assets/images/Image\ 87.jpg');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -431,7 +430,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 90.jpg');">
+                    <div class="home-post-img" style="background-image: url('../build/assets/images/Image\ 90.jpg');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -459,7 +458,7 @@
                     </div>
                 </div>
                  <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('./assets/images/haaland-thImage\ 89.jpg');">
+                    <div class="home-post-img" style="background-image: url('../build/assets/images/haaland-thImage\ 89.jpg');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
@@ -488,7 +487,7 @@
                     </div>
                 </div>
                 <div class="home-content-post">
-                    <div class="home-post-img" style="background-image: url('./assets/images/Image\ 70.png');">
+                    <div class="home-post-img" style="background-image: url('../build/assets/images/Image\ 70.png');">
                     </div>
                     <div class="home-post-content">
                         <div class="home-post-content__header">
