--- a/app/Login.html
+++ b/app/Login.html
@@ -22,16 +22,21 @@
         </div>
         <div class="clique-modal-login center-position">
             <div class="clique-modal-login__title">Sign In</div>
-            <form action="" method="Post" class="clique-modal-login__form-login">
-                <div class="form-login-email">
-                    <input id="email" type="text" placeholder="Email" class="form-login-email__input">
-                    <label for="email" class="form-login-email__label">Email</label>
+            <div class="message-cant-find-account">
+                Sorry, we can't find an account with this email<br /> address. Please try again or create a new account.
+            </div>  
+            <form action="./Home.html" method="POST" id="form-login" class="clique-modal-login__form-login">
+                <div class="form-group form-login-email">
+                    <input id="Email" type="text" placeholder="Email" class="form-login-email__input">
+                    <label for="Email" class="form-login-email__label">Email</label>
                 </div>
-                <div class="form-login-password">
-                    <input id="password" type="password" placeholder="Password" class="form-login-password__input">
-                    <label for="password" class="form-login-password__label" for="">Password</label>
+                <span class="form-invalid-message"></span>
+                <div class="form-group form-login-password">
+                    <input id="Password" type="password" placeholder="Password" class="form-login-password__input">
+                    <label for="Password" class="form-login-password__label" for="">Password</label>
                 </div>
-                <input type="submit" class="form-login-submit btn-hover" value="Login">
+                <span class="form-invalid-message"></span>
+                <input type="button" class="form-login-submit btn-hover" value="Login">
             </form>
             <a href="" class="clique-modal-login__fogot-password">Fogot Password?</a>
             <div class="clique-modal-login__seperate">
@@ -59,5 +64,7 @@
             Are you Vender? <a href="">Log in</a>
         </div>
     </div>  
+
+    <script src="../app/javascript/login.js"></script>
 </body>
 </html>
