--- a/app/Register.html
+++ b/app/Register.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../build/assets/css/styles.min.css">
     <link rel="stylesheet" href="../build/assets/css/styles.min.css.map">
-    <!-- <link rel="stylesheet" href="./css/login__responsive.css"> -->
     <title>Register</title>
     <style>
         body::-webkit-scrollbar {
@@ -21,6 +20,10 @@
         
         body::-webkit-scrollbar-thumb {
             background-color: #1f1e1e;
+        }
+
+        .form-invalid-message {
+            margin-bottom: 0.6rem !important;
         }
     </style>
 </head>
@@ -38,68 +41,99 @@
         </div>
         <div class="clique-modal center-position">
             <div class="clique-modal__title">Sign In</div>
-            <form method="POST" action="" class="register-group-fields">
+            <form method="POST" action="" id="form-register" class="register-group-fields">
                 <div class="register-group-fields__row">
-                    <div class="register-field">
-                        <label for="input-name">Talent Name</label>
-                        <input type="text" id="input-name" class="register-field__input input--name">
+                    <div>
+                        <div class="register-field">
+                            <label for="input-name">Talent Name</label>
+                            <input type="text" id="Name" class="register-field__input input--name">
+                        </div>
+                        <span class="form-invalid-message">This field is required</span>
                     </div>
-                    <div class="register-field">
-                        <label for="website">Website</label>
-                        <input type="text" id="website" class="register-field__input input--website">
+                    <div>
+                        <div class="register-field">
+                            <label for="website">Website</label>
+                            <input type="text" id="Website" class="register-field__input input--website">
+                        </div>
+                        <span class="form-invalid-message">This field is required</span>
                     </div>
                 </div>
                 <div class="register-group-fields__row">
-                    <div class="register-field">
-                        <label for="contact">Contact</label>
-                        <input type="text" id="contact" class="register-field__input input--contact">
+                    <div>
+                        <div class="register-field">
+                            <label for="contact">Contact</label>
+                            <input type="text" id="Contact" class="register-field__input input--contact">
+                        </div>
+                        <span class="form-invalid-message">This field is required</span>
                     </div>
-                    <div class="register-field">
-                        <label for="facebook">Facebook</label>
-                        <input type="text" id="facebook" class="register-field__input input--facebook">
-                    </div>
-                </div>
-                <div class="register-group-fields__row">
-                    <div class="register-field">
-                        <label for="phone">Phone</label>
-                        <input type="text" id="phone" class="register-field__input input--phone">
-                    </div>
-                    <div class="register-field">
-                        <label for="instagram">Instagram</label>
-                        <input type="text" id="instagram" class="register-field__input input--instagram">
+                    <div>
+                        <div class="register-field">
+                            <label for="facebook">Facebook</label>
+                            <input type="text" id="Facebook" class="register-field__input input--facebook">
+                        </div>
+                        <span class="form-invalid-message">This field is required</span>
                     </div>
                 </div>
                 <div class="register-group-fields__row">
-                    <div class="register-field">
-                        <label for="email">Email</label>
-                        <input type="text" id="email" class="register-field__input input--email">
+                    <div>
+                        <div class="register-field">
+                            <label for="phone">Phone</label>
+                            <input type="text" id="Phone" class="register-field__input input--phone">
+                        </div>
+                        <span class="form-invalid-message">This field is required</span>
                     </div>
-                    <div class="register-field">
-                        <label for="twitter">Twitter</label>
-                        <input type="text" id="twitter" class="register-field__input input--twitter">
+                    <div>
+                        <div class="register-field">
+                            <label for="instagram">Instagram</label>
+                            <input type="text" id="Instagram" class="register-field__input input--instagram">
+                        </div>
+                        <span class="form-invalid-message">This field is required</span>
                     </div>
                 </div>
                 <div class="register-group-fields__row">
-                    <div class="register-field">
-                        <label for="password">Password</label>
-                        <input type="password" id="password" class="register-field__input input--password">
+                    <div>
+                        <div class="register-field">
+                            <label for="email">Email</label>
+                            <input type="text" id="Email" class="register-field__input input--email">
+                        </div>
+                        <span class="form-invalid-message">This field is required</span>
                     </div>
-                    <div class="register-field">
-                        <label for="confirm-password">Confirm Password</label>
-                        <input type="password" id="confirm-password" class="register-field__input input--confirm">
+                    <div>
+                        <div class="register-field">
+                            <label for="twitter">Twitter</label>
+                            <input type="text" id="Twitter" class="register-field__input input--twitter">
+                        </div>
+                        <span class="form-invalid-message">This field is required</span>
+                    </div>
+                </div>
+                <div class="register-group-fields__row">
+                    <div>
+                        <div class="register-field">
+                            <label for="password">Password</label>
+                            <input type="password" id="Password" class="register-field__input input--password">
+                        </div>
+                        <span class="form-invalid-message">This field is required</span>
+                    </div>
+                    <div>
+                        <div class="register-field">
+                            <label for="confirm-password">Confirm Password</label>
+                            <input type="password" id="ConfirmPassword" class="register-field__input input--confirm">
+                        </div>
+                        <span class="form-invalid-message">This field is required</span>
                     </div>
                 </div>
                 <div class="register-group-fields__row">
                     <div class="register-field field-description">
                         <label for="description">Description Of Talent</label>
-                        <textarea name="" id="description" class="register-field__input input--description" style="font-family: Helvetica, sans-serif; resize: none;"></textarea>
+                        <textarea name="" id="Description" class="register-field__input input--description" style="font-family: Helvetica, sans-serif; resize: none;"></textarea>
                     </div>
+                    <span class="form-invalid-message" style="margin-right: auto;">This field is required</span>
                 </div>
                 <div class="register-group-fileds__row register-optional">
                     <div class="register-optional-item register-optional--back">
                         Back
                     </div>
-                    <div class="register-optional-item register-optional--next">
+                    <div class="register-optional-item register-optional--next form-register-submit">
                         Next
                     </div>
                 </div>
@@ -113,5 +147,7 @@
             <span>reCAPTCHA</span>
         </div>
     </div>  
+
+    <script src="./javascript/register.js"></script>
 </body>
 </html>
