handle login user with API and logout functional

--- a/app/Home.html
+++ b/app/Home.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="header-functional__loutout">
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="sign-out-alt" class="svg-inline--fa fa-sign-out-alt fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M497 273L329 441c-15 15-41 4.5-41-17v-96H152c-13.3 0-24-10.7-24-24v-96c0-13.3 10.7-24 24-24h136V88c0-21.4 25.9-32 41-17l168 168c9.3 9.4 9.3 24.6 0 34zM192 436v-40c0-6.6-5.4-12-12-12H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h84c6.6 0 12-5.4 12-12V76c0-6.6-5.4-12-12-12H96c-53 0-96 43-96 96v192c0 53 43 96 96 96h84c6.6 0 12-5.4 12-12z"></path></svg>
-                    <span>Logout</span>                  
+                    <span class="functional-user-logout">Logout</span>                  
                 </div>
                 <div class="header-functional__user">
                     <img src="../build/assets/images/Mask Group 107.png" alt="" class="functional-user-img">
@@ -90,7 +90,11 @@
                     </label>
                     <svg xmlns="http://www.w3.org/2000/svg" width="10" height="6" viewBox="0 0 10 6">
                         <path id="Polygon_2" data-name="Polygon 2" d="M4.232.922a1,1,0,0,1,1.536,0L8.633,4.36A1,1,0,0,1,7.865,6H2.135a1,1,0,0,1-.768-1.64Z" transform="translate(10 6) rotate(180)" fill="#52595c"/>
-                    </svg>                      
+                    </svg>
+                    <div class="functional-user-container">
+                        <span class="header-functional__user-name user-name-pc">Hà Kiều Trang</span>
+                        <span class="functional-user-logout">Đăng xuất</span>
+                    </div>                 
                 </div>
             </div>
         </header>
