--- a/app/Home.html
+++ b/app/Home.html
@@ -12,20 +12,6 @@
          html, body {
             scroll-behavior: smooth;
         }
-
-        /*@keyframes moveUp {
-            from {
-                opacity: 0;
-                transform: scale(0.8);
-            } to {
-                opacity: 1;
-                transform: scale(1);
-            }
-        }
-
-        .home-content-post {
-            animation: moveUp 0.1s ease-in-out;
-        } */
     </style>
 </head>
 <body>
@@ -102,13 +88,13 @@
             <div class="home-content__category">
                 <ul class="category-list">
                     <li class="category-item">Schedule</li>
-                    <li class="category-item">Results</li>
+                    <li class="category-item">Result</li>
                     <li class="category-item">Music</li>
                     <li class="category-item">News</li>
                     <li class="category-item">Media</li>
-                    <li class="category-item">Forums</li>
+                    <li class="category-item">Status</li>
                     <li class="category-item">Polls</li>
-                    <li class="category-item">Shop</li>
+                    <li class="category-item">Event</li>
                     <li class="category-item">Social</li>
                 </ul>
             </div>
@@ -118,6 +104,11 @@
         </div>
     </div>
 
+    <div class="notify-not-updated">
+        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation-circle" class="svg-inline--fa fa-exclamation-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"></path></svg>
+        <span>This action will not been updated on the database.</span>
+    </div>
+    
     <script src="./javascript/home.js"></script>
 </body>
 </html>
