replace default img user

--- a/app/Home.html
+++ b/app/Home.html
@@ -69,7 +69,7 @@
                     <span class="functional-user-logout">Logout</span>                  
                 </div>
                 <div class="header-functional__user">
-                    <img src="../build/assets/images/Mask Group 107.png" alt="" class="functional-user-img">
+                    <img src="../build/assets/images/logo-user.png" style="height: 45px; width: 45px;" alt="" class="functional-user-img">
                     <span class="header-functional__user-name">Hà Kiều Trang</span>
                     <label for="functional" class="header-functional__user-close"> 
                         X
